Amended app to talk with cars app

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,25 +10,27 @@
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
-    
+
     h1 {
       font-size: 500%;
       font-weight: normal;
       margin-bottom: 0;
     }
-    
+
     h2 {
       font-size: 200%;
       font-weight: normal;
       margin-bottom: 0;
     }
+
   </style>
 </head>
 <body>
   <div align="center">
     <h1>Welcome to 1.0.9</h1>
     <h2>This application will be deployed on Kubernetes.</h2>
+      <p></p>
+    <button style="border:0px; background-color: transparent;"><a href="/cars/" style="border-width: 0px; font-size: 50px; color: white; background: blue; text-decoration: underline">Get CARS NOW - connects to another Kube Service</a></button>
   </div>
 </body>
 </html>
-
